# flutter_fast_image_editor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
doc/: api_reference.md  architecture.md  native_api.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/erykkruk/fast_image_editor_example/: MainActivity.kt
example/lib/: main.dart
example/test/: widget_test.dart
ios/: fast_image_editor.podspec
ios/Classes/: FastImageEditorPlugin.swift
lib/: fast_image_editor.dart
lib/src/: enums.dart  exceptions.dart  fast_image_editor_api.dart  native_bindings.dart
src/: image_edit.cpp  image_edit.h
test/: fast_image_editor_test.dart
